@@ -28,6 +28,7 @@ xine-lib (1-rc1)
   * fix aspect ratio of MPEG1 streams
   * Add support for TITLE= and CHAPTER*= comment in ogm files
   * fix deadlock/freeze problems in audio output thread
+  * Don't add the data track to the autoplay list for Audio CDs (Linux)
 
 xine-lib (1-rc0a)
   * includes ffmpeg's MPEG encode in dist tarball (fixes DXR3 support)
